--- a/storage/templates/storage/redesign/storage_blocks/lootbox.html
+++ b/storage/templates/storage/redesign/storage_blocks/lootbox.html
@@ -134,7 +134,7 @@
         </li>
 
         <li class="box__item">
-          <img src="img/prem2.png" alt="">
+          <img src="{% static 'img/prem.png' %}" alt="">
           <div class="box__itemBlock">
             <h2>Дни премиум-аккаунта</h2>
             <ul class="box__innerList">
@@ -147,7 +147,7 @@
         </li>
 
         <li class="box__item">
-          <img src="img/wp.png" alt="">
+          <img src="{% static 'img/wild_pass.svg' %}" alt="">
           <div class="box__itemBlock">
             <h2>Wild pass</h2>
             <ul class="box__innerList">
@@ -209,7 +209,7 @@
               </svg>
               <span>4500 G</span>
             </button>
-            <p class="box__sale">скидка: <span>G 500</span></p>
+            <p class="box__sale" style="color: #EB9929!important">скидка: <span style="color: #EB9929!important">G 500</span></p>
           </div>
         </li>
 
@@ -231,7 +231,7 @@
               </svg>
               <span>8500 G</span>
             </button>
-            <p class="box__sale">скидка: <span>G 1500</span></p>
+            <p class="box__sale" style="color: #EB9929!important">скидка: <span style="color: #EB9929!important">G 1500</span></p>
           </div>
         </li>
 
@@ -253,7 +253,7 @@
               </svg>
               <span>40 000 G</span>
             </button>
-            <p class="box__sale">скидка: <span>G 10 000</span></p>
+            <p class="box__sale" style="color: #EB9929!important">скидка: <span style="color: #EB9929!important">G 10 000</span></p>
           </div>
         </li>
 
@@ -266,16 +266,16 @@
                 <mask id="mask0_59_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
                   <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>
                 </mask>
-								<g mask="url(#mask0_59_319)">
-									<path class="geometry2" fill="var(--c10two)" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z"/>
-									<path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
-									<path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
-									<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
-								</g>
+                <g mask="url(#mask0_59_319)">
+                    <path class="geometry2" fill="var(--c10two)" d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z"/>
+                    <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
+                    <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
+                    <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
+                </g>
               </svg>
               <span>75 000 G</span>
             </button>
-            <p class="box__sale">скидка: <span>G 25 000</span></p>
+            <p class="box__sale" style="color: #EB9929!important">скидка: <span style="color: #EB9929!important">G 25 000</span></p>
           </div>
         </li>
       </ul>
@@ -315,12 +315,12 @@
         </li>
 
         <li class="box__item">
-          <img src="img/prem2.png" alt="">
+          <img src="{% static 'img/prem.png' %}" alt="">
 					<span class="box__itemCount box__itemCount--prem"></span>
         </li>
 
         <li class="box__item">
-          <img src="img/wp.png" alt="">
+          <img src="{% static 'img/wild_pass.svg' %}" alt="">
 					<span class="box__itemCount box__itemCount--wp"></span>
         </li>
       </ul>
@@ -336,7 +336,7 @@
 {% endblock %}
 
 {% block for_scripts_and_css %}
-{% endblock %}
+
 
 <script>
 
@@ -371,7 +371,7 @@
 
 			this.stateData = {
 				currentBlock: 0, //какой текущий блок показывается 0 или 1
-				chestCount: 10, //сколько у чувака сундуков
+				chestCount: {% localize off %}{{ lootbox_count }}{% endlocalize %}, //сколько у чувака сундуков
 				isPopupOpened: false, //открыт ли попап с наградами
 				goldReward: '', //сколько золота в награде
 				premReward: '', //сколько према в награде
@@ -427,7 +427,7 @@
 
 			this.setEventListeners();
 			this.state.isLoading = false;
-			this.state.chestCount = 2;
+			this.state.chestCount = {% localize off %}{{ lootbox_count }}{% endlocalize %};
 		}
 
 		setEventListeners() {
@@ -438,34 +438,97 @@
 
 			this.openChestBtn.addEventListener('click', () => {
 				this.state.isLoading = true;
+                var obj = this;
 
-                fetch('/open_lootboxes/', {
-					body: {
-				 		csrfmiddlewaretoken: csrftoken,
-				 		csrftoken: 1
-				 	}
-				 })
-				sleep(2000)
-					.then((res) => {
-						const data = res.json();
-                        this.state.goldReward = numberWithSpaces(data.gold_prize);
-                        this.state.premReward = numberWithSpaces(data.prem_prize);
-                        this.state.wpReward = numberWithSpaces(data.wp_prize);
-						this.state.isPopupOpened = true;
-						/* что-то делаем после ответа */
-					})
-					.catch((error) => console.warn('[CHEST_OPEN_ERROR]: ', error))
-					.finally(() => this.state.isLoading = false);
+                var sending_data = "&csrfmiddlewaretoken=" + csrftoken + "&count=" + 1;
+                $.ajax({
+                    type: "POST",
+                    url: "/open_lootboxes/",
+                    data:  sending_data,
+                    cache: false,
+                    success: function(data){
+                        if (data.response == 'ok'){
+                            sleep(2000);
+
+                            obj.state.goldReward = numberWithSpaces(data.gold_prize);
+                            obj.state.premReward = numberWithSpaces(data.prem_prize);
+                            obj.state.wpReward = numberWithSpaces(data.wp_prize);
+                            obj.state.isPopupOpened = true;
+
+                            obj.state.isLoading = false;
+                        }
+                        else{
+                            obj.state.isLoading = false;
+                            display_modal('notify', data.header, data.response, null, data.grey_btn);
+                        }
+                        actualize();
+                    }
+                });
 
 				/* открыть сундук */
 
 			});
 
 			this.openChest10Btn.addEventListener('click', () => {
+                this.state.isLoading = true;
+                var obj = this;
+
+                var sending_data = "&csrfmiddlewaretoken=" + csrftoken + "&count=" + 10;
+                $.ajax({
+                    type: "POST",
+                    url: "/open_lootboxes/",
+                    data:  sending_data,
+                    cache: false,
+                    success: function(data){
+                        if (data.response == 'ok'){
+                            sleep(2000);
+
+                            obj.state.goldReward = numberWithSpaces(data.gold_prize);
+                            obj.state.premReward = numberWithSpaces(data.prem_prize);
+                            obj.state.wpReward = numberWithSpaces(data.wp_prize);
+                            obj.state.isPopupOpened = true;
+
+                            obj.state.isLoading = false;
+                        }
+                        else{
+                            obj.state.isLoading = false;
+                            display_modal('notify', data.header, data.response, null, data.grey_btn);
+                        }
+                        actualize();
+                    }
+                });
+
 				/* открыть 10 сундуков */
 			});
 
 			this.openChestAllBtn.addEventListener('click', () => {
+                this.state.isLoading = true;
+                var obj = this;
+
+                var sending_data = "&csrfmiddlewaretoken=" + csrftoken + "&count=" + {% localize off %}{{ lootbox_count }}{% endlocalize %};
+                $.ajax({
+                    type: "POST",
+                    url: "/open_lootboxes/",
+                    data:  sending_data,
+                    cache: false,
+                    success: function(data){
+                        if (data.response == 'ok'){
+                            sleep(2000);
+
+                            obj.state.goldReward = numberWithSpaces(data.gold_prize);
+                            obj.state.premReward = numberWithSpaces(data.prem_prize);
+                            obj.state.wpReward = numberWithSpaces(data.wp_prize);
+                            obj.state.isPopupOpened = true;
+
+                            obj.state.isLoading = false;
+                        }
+                        else{
+                            obj.state.isLoading = false;
+                            display_modal('notify', data.header, data.response, null, data.grey_btn);
+                        }
+                        actualize();
+                    }
+                });
 				/* открыть все сундуки */
 			});
 		}
@@ -473,3 +536,4 @@
 
 	const boxPage = new BoxPage();
 </script>
+{% endblock %}
