--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -207,7 +207,7 @@
 			  		<div class="store__wp-wrapper">
 						<h2>Новогодние сундуки</h2>
 						<picture>
-							<img src="{% static 'img/lootbox.png' %}" alt="wild_pass" class="eduBlock6">
+							<img src="{% static 'img/chest.png' %}" alt="wild_pass" class="eduBlock6">
 						</picture>
 						<div class="store__wp-wrapper-r">
 							<span>{% trans 'Количество' context "storage_assets" %}: <label>{{ lootbox_count }}</label></span>
