правка ивента на НГ

--- a/player/templates/player/redesign/game_event/newyear.html
+++ b/player/templates/player/redesign/game_event/newyear.html
@@ -277,7 +277,8 @@
 						10 000
           </p>
 					<div class="ny__item-point right"></div>
-          <img class="ny__border" style="border: 1px dashed tomato;" src="{{ ava_border_1.image.url }}" alt="">
+<!--            <img class="ny__border" style="border: 1px dashed tomato;" src="" alt="">-->
+            <img class="ny__border" src="{% static 'img/chest.png' %}" alt="">
         </li>
 
         <li class="ny__item">
@@ -325,7 +326,8 @@
 						20 000
           </p>
 					<div class="ny__item-point right"></div>
-          <img class="ny__border" style="border: 1px dashed tomato;" src="{{ ava_border_2.image.url }}" alt="">
+<!--          <img class="ny__border" style="border: 1px dashed tomato;" src="" alt="">-->
+            <img class="ny__border" src="{% static 'img/chest.png' %}" alt="">
         </li>
 
         <li class="ny__item">
@@ -373,7 +375,8 @@
 						30 000
           </p>
 					<div class="ny__item-point right"></div>
-          <img class="ny__border" style="border: 1px dashed tomato;" src="{{ ava_border_3.image.url }}" alt="">
+<!--          <img class="ny__border" style="border: 1px dashed tomato;" src="" alt="">-->
+            <img class="ny__border" src="{% static 'img/chest.png' %}" alt="">
         </li>
 
       </ul>
