--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -394,7 +394,7 @@
           </a>
         {% else %}
         <!--Блок ИВЕНТ-->
-        <a href="/halloween/" class="overview__event">
+        <a href="/new_year/" class="overview__event">
           <!--сообщение что войн нет-->
           {% if has_event.type == 'hl' %}
           <p class="overview__war-no event">Тыквенный спас</p>
